...
        DataCard(CPU_TEST_SECTION) {
            AccText(cpuTestStatus(isEratosthenesRunning))
            AccText(cpuAverageTime(cpuAverageElapsedTimePerCycle))

            RunButton(
                accessibleText = RUN_CPU_TEST,
                automationId = "sieve_eratosthenes_button",
                isLoading = isEratosthenesRunning,
                onClick = { performanceVM.runSieveOfEratosthenes() }
            )
        }

        DataCard(MEMORY_TEST_SECTION) {
...
            AccText(volatility(volatility))
            AccText(intercept(intercept))
            AccText(memoryAverageTime(memoryAverageElapsedTimePerCycle))

            RunButton(
                accessibleText = RUN_MEMORY_TEST,
                automationId = "memory_test_button",
                isLoading = isMemoryRunning,
                onClick = { performanceVM.runMemoryStressTest() }
            )
        }

        DataCard(UI_TEST_SECTION) {
...
