...
    val visual: String,
    val accessibility: String = visual
)

object Labels {
    // TITLE
    val DEVICE_TITLE: AccessibleText = AccessibleText("Appareil")
    val QR_TITLE: AccessibleText = AccessibleText("QR Code")
    val PERFORMANCE_TITLE: AccessibleText = AccessibleText("Performance")

    // DEVICE PAGE
    val DEVICE_INFO_SECTION: AccessibleText = AccessibleText("Informations de l'appareil")
    val LIVE_METRICS_SECTION: AccessibleText = AccessibleText("Mesures en temps réél")
    fun deviceName(deviceName: String): AccessibleText {
        return AccessibleText("Nom de l'appareil : $deviceName")
...
